fix(form): [form] fix form item not aligned close #1726

--- a/packages/theme/src/form-item/index.less
+++ b/packages/theme/src/form-item/index.less
@@ -139,6 +139,16 @@
     line-height: var(--ti-form-item-label-line-height);
     .clearfix();
 
+    .@{input-prefix-cls},
+    .@{rate-prefix-cls},
+    .@{select-prefix-cls},
+    .@{css-prefix}checkbox,
+    .@{css-prefix}radio,
+    .@{css-prefix}link,
+    .@{css-prefix}numeric {
+      vertical-align: bottom;
+    }
+
     .@{input-prefix-cls} {
       display: inline-block;
       &.@{range-editor-prefix-cls}.@{input-prefix-cls}__inner {
@@ -151,7 +161,6 @@
     }
 
     .@{rate-prefix-cls} {
-      vertical-align: middle;
       &__text {
         line-height: 1.5;
       }
@@ -167,8 +176,10 @@
 
     .@{css-prefix}checkbox,
     .@{css-prefix}radio {
-      vertical-align: middle;
-      line-height: 30px;
+      line-height: var(--ti-form-item-label-line-height);
+    }
+    .@{css-prefix}slider-container {
+      height: var(--ti-form-item-label-line-height);
     }
     .@{css-prefix}checkbox-group {
       min-height: var(--ti-form-item-label-line-height);
@@ -194,7 +205,7 @@
 
     .validate-icon {
       fill: var(--ti-form-item-error-text-color);
-      margin-right: 8px;
+      margin-right: var(--ti-form-item-error-icon-margin-right);
     }
     .@{form-item-prefix-cls}__validate-message {
       vertical-align: middle;
