--- a/packages/theme/src/form-item/vars.less
+++ b/packages/theme/src/form-item/vars.less
@@ -51,6 +51,8 @@
   --ti-form-item-margin-bottom-medium: var(--ti-common-space-5x, 20px);
   // 表单校验错误时星号的显示(hide)
   --ti-form-item-error-star-display: inline-block;
+  // 表单校验图标右侧外边距
+  --ti-form-item-error-icon-margin-right: var(--ti-common-space-base, 4px);
   // 表单校验行内错误左侧外边距
   --ti-form-item-error-inline-margin-left: calc(var(--ti-common-space-base, 4px) * 2.5);
   // 表单校验块级错误消息上侧内边距
